# eigen-performance-test

./: .gitignore  CMakeLists.txt  README.md  cspell.json  run_test.py
src/: .clang-format  double_float_Eigen_unittest.cpp  double_float_arithmetic_unittest.cpp  double_float_less_then_unittest.cpp  eigen_matrix_unittest.cpp  float_arithmetic_unittest.cpp  float_comparison_unittest.cpp  float_computation_unittest.cpp  stddev_unittest.cpp  types.h
